--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
 }
 
 body {
+  overflow-x: hidden;
   margin: 0;
   font-family: "Playfair Display", serif;
+}
+* {
+  margin: 0;
+  padding: 0;
 }
