--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -23,6 +23,9 @@ color: #000;
 }
 .intro-left {
     z-index: 3;
+    position: absolute;
+    left: 50px;
+    padding-top: 400px;
 }
 .introphoto {
  position: absolute;
@@ -52,6 +55,15 @@ color: #000;
       }
       .introphoto {
         width: 40%;
+      }
+      .introduction p {
+        padding: 30px 0;
+      }
+      .intro-span {
+        margin-top: 20px;
+      }
+      .intro-left {
+        left: 0;
       }
 }
 @media(min-width:576px) {
