--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -23,9 +23,6 @@ color: #000;
 }
 .intro-left {
     z-index: 3;
-    position: absolute;
-    left: 50px;
-    padding-top: 400px;
 }
 .introphoto {
  position: absolute;
@@ -62,9 +59,6 @@ color: #000;
       .intro-span {
         margin-top: 20px;
       }
-      .intro-left {
-        left: 0;
-      }
 }
 @media(min-width:576px) {
     .intro-text span {
@@ -74,10 +68,22 @@ color: #000;
     .introphoto {
         height: 70vh;
         position: absolute;
-   right: 70px;
+   right: 0px;
    top: 80px;
     }
     .shop {
         padding: 20px 50px; 
     }
+    .intro-left {
+        margin-left: -20px;
+    }
 }
+@media(min-width:992px) {
+    .intro-left {
+        margin-left: -100px;
+    }
+    .introphoto {
+        right: 70px;
+    }
+}
+
